# travel-agent-backend

./: .coverage  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  API_GUIDE.md  Dockerfile  README.md  REFACTOR_SUMMARY.md  coverage.xml  example.md  pyproject.toml  sonar-project.properties
.gitlab/ci/: lint.yml  sonar.yml  test.yml
app/: cli.py  config.py  logging.py  main.py  metrics.py  telemetry.py
app/api/: deps.py
app/api/v1/: auth.py  users.py
app/core/: __init__.py  config.py  exceptions.py  handlers.py  logging.py  security.py  telemetry.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  user.py
scripts/: commit_msg_check.py
tests/: test_health.py
